--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       /* Example of what you can do */
       "--w3m-accent-color": "#FFD637",
       "--w3m-background-color": "#FFD637",
-      "--w3m-logo-image-url": "/coinify-logo.png",
+      "--w3m-logo-image-url": "/coinify20.png",
     };
 
     // Notification modals
